logs/products.oshatranslations.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/OSHATranslations'...
Listing './lib/python3.5/site-packages/Products/OSHATranslations/i18n'...
Compiling './lib/python3.5/site-packages/Products/OSHATranslations/i18n/test_pofiles.py'...
***   File "./lib/python3.5/site-packages/Products/OSHATranslations/i18n/test_pofiles.py", line 26
    print "\nchecking", name
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/OSHATranslations/scripts'...
Compiling './lib/python3.5/site-packages/Products/OSHATranslations/scripts/copy_msgstr_from_other_msgid.py'...
***   File "./lib/python3.5/site-packages/Products/OSHATranslations/scripts/copy_msgstr_from_other_msgid.py", line 17
    except IOError, exception:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/OSHATranslations/scripts/find-untranslated-strings.py'...
***   File "./lib/python3.5/site-packages/Products/OSHATranslations/scripts/find-untranslated-strings.py", line 28
    print pou.find_all_untranslated(all_msgstrs)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/OSHATranslations/scripts/find_msgid_details_by_msgstr.py'...
***   File "./lib/python3.5/site-packages/Products/OSHATranslations/scripts/find_msgid_details_by_msgstr.py", line 40
    print osha_unt
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/OSHATranslations/scripts/napo'...
Compiling './lib/python3.5/site-packages/Products/OSHATranslations/scripts/poutils.py'...
***   File "./lib/python3.5/site-packages/Products/OSHATranslations/scripts/poutils.py", line 14
    except IOError, exception:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.OSHATranslations-1.2.38.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
